[gd_scene load_steps=9 format=2]

[ext_resource path="res://levels/Level1Fire/Objects/FireLine/obs_fire_line.png" type="Texture" id=1]
[ext_resource path="res://levels/Level1Fire/Objects/FireLine/FireLine.gd" type="Script" id=2]

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 120, 25 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 1 )
region = Rect2( 120, 0, 120, 25 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 1 )
region = Rect2( 0, 25, 120, 25 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 1 )
region = Rect2( 120, 25, 120, 25 )

[sub_resource type="SpriteFrames" id=5]
animations = [ {
"frames": [ SubResource( 1 ) ],
"loop": true,
"name": "default",
"speed": 5.0
}, {
"frames": [ SubResource( 2 ), SubResource( 3 ), SubResource( 4 ) ],
"loop": true,
"name": "fire",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=6]
extents = Vector2( 120, 12 )

[node name="FireLine" type="Area2D" groups=[
"fire_lines",
]]
script = ExtResource( 2 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 5 )
playing = true
centered = false
offset = Vector2( 0, -12 )

[node name="AnimatedSprite2" type="AnimatedSprite" parent="."]
frames = SubResource( 5 )
playing = true
centered = false
offset = Vector2( 120, -12 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 120, 0 )
shape = SubResource( 6 )
[connection signal="body_entered" from="." to="." method="_on_FireLine_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_FireLine_body_exited"]
